@@ -5,6 +5,7 @@ ver 0.21.24 (not yet released)
   - simple: fix crash when mounting twice
 * fix unit test failure
 * fix build failure with Android NDK r21
+* work around Meson bug breaking the Windows build with GCC 10
 
 ver 0.21.23 (2020/04/23)
 * protocol
